--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.15"
   }
 }
